--- a/example/package.json
+++ b/example/package.json
@@ -1,26 +1,38 @@
 {
   "name": "example",
   "version": "1.0.0",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
+  "main": "dist/client/index.js",
   "license": "MIT",
+  "scripts": {
+    "build:client": "rollup --config rollup.config.ts",
+    "build:server": "tsc -p src/server --outDir dist",
+    "build": "yarn build:client && yarn build:server",
+    "start": "node dist/server/index.js"
+  },
   "dependencies": {
-    "@types/react": "^16.9.36",
-    "@types/react-dom": "^16.9.8",
+    "fastify": "^3.22.1",
+    "fastify-static": "^4.4.2",
     "localforage": "^1.7.4",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
-    "mobx-sync": "^3.0.0-next.1",
+    "mobx-sync-lite": "file:..",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@types/node": "^16.11.1",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
+    "pino-pretty": "^7.1.0",
     "rollup": "^2.16.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.6.2",
-    "rollup-plugin-typescript2": "^0.27.1",
+    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^3.9.5"
   }
 }
