Add rollup build check

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -28,6 +28,27 @@ jobs:
       - name: Run TypeScript build
         run: npx tsc --noEmit --incremental false --tsBuildInfoFile null
 
+  rollup:
+    name: Rollup Build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v2.3.5
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2.4.1
+        with:
+          node-version: 14
+          check-latest: true
+          cache: yarn
+
+      - name: Install Node.js dependencies
+        run: yarn install
+
+      - name: Run Rollup build
+        run: yarn build
+
   jest:
     name: Test
     runs-on: ubuntu-latest
