--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bundle": "rollup --config rollup.config.ts",
     "build": "run-s clean bundle",
     "test": "jest",
-    "prepublishOnly": "run-s test build"
+    "prepublishOnly": "run-s test build",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -44,11 +45,6 @@
   },
   "peerDependencies": {
     "mobx": "5.x"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,less,scss,md}": [
